force-app/main/default/objects/PRISM_WildfireRiskScore__c/PRISM_WildfireRiskScore__c.object-meta.xml
<CustomObject>
    <description>AI-calculated wildfire risk score for an Asset. Updated by batch job and triggered scoring engine.</description>

    <label>Wildfire Risk Score</label>
    <nameField>
        <label>Risk Score ID</label>
        <type>AutoNumber</type>
        <displayFormat>WRS-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Wildfire Risk Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>