force-app/main/default/objects/PRISM_WildfireRiskScore__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset</label>
    <type>MasterDetail</type>
    <referenceTo>PRISM_Asset__c</referenceTo>
    <relationshipLabel>Wildfire Risk Scores</relationshipLabel>
    <relationshipName>WildfireRiskScores</relationshipName>
    
</CustomField>