force-app/main/default/objects/PRISM_WildfireRiskScore__c/fields/CalculatedDate__c.field-meta.xml
<CustomField>
    <fullName>CalculatedDate__c</fullName>
    <label>Calculated Date</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>