force-app/main/default/objects/PRISM_WildfireRiskScore__c/fields/PreviousScore__c.field-meta.xml
<CustomField>
    <fullName>PreviousScore__c</fullName>
    <label>Previous Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>