force-app/main/default/objects/PRISM_WildfireRiskScore__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Risk Score (0-100)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>