force-app/main/default/objects/PRISM_WildfireRiskScore__c/fields/ScoreFactors__c.field-meta.xml
<CustomField>
    <fullName>ScoreFactors__c</fullName>
    <label>Score Factors (JSON)</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>