force-app/main/default/objects/PRISM_WildfireRiskScore__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Risk Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Tier 1 - Extreme</fullName><default>false</default><label>Tier 1 - Extreme</label></value>
            <value><fullName>Tier 2 - High</fullName><default>false</default><label>Tier 2 - High</label></value>
            <value><fullName>Tier 3 - Elevated</fullName><default>false</default><label>Tier 3 - Elevated</label></value>
            <value><fullName>Tier 4 - Moderate</fullName><default>false</default><label>Tier 4 - Moderate</label></value>
            <value><fullName>Tier 5 - Low</fullName><default>false</default><label>Tier 5 - Low</label></value>
        </valueSetDefinition>
    </valueSet>
    
</CustomField>